--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@mui/material": "^6.1.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@shadcn/ui": "^0.0.4",
+    "chart.js": "^4.4.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "font-awesome": "^4.7.0",
+    "lucide-react": "^0.453.0",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-icons": "^5.3.0"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "recharts": "^2.13.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "ui": "github:shadcn/ui"
   },
   "devDependencies": {
     "@types/node": "^20",
